--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "knex": "^0.16.3",
     "nodemailer": "^5.1.1",
     "npm": "^6.9.0",
-    "pg": "^7.9.0"
+    "pg": "^7.9.0",
+    "watson-developer-cloud": "^3.18.3"
   },
   "devDependencies": {}
 }
